--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider:
   http:
-  webview_flutter:
+  easy_web_view: ^1.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
